Adição do carross

--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style/main.css" />
-    <title>CLONE DO NETFLIX</title>
+    <title>NERDFLIX</title>
   </head>
   <body>
     <header>
       <div class="container">
-        <h2 class="logo">NETFLIX</h2>
+        <h2 class="logo">NERDFLIX</h2>
         <nav>
           <a href="#">Início</a>
           <a href="#">Séries</a>
@@ -19,5 +19,27 @@
         </nav>
       </div>
     </header>
+
+    <main>
+      <!-- classe wrapper -->
+      <div class="filme-principal">
+        <div class="container">
+          <h3 class="titulo">ONE PIECE</h3>
+          <p class="descricao">
+            Houve um homem que conquistou tudo aquilo que o mundo tinha a
+            oferecer, o lendário Rei dos Piratas, Gold Roger. Capturado e
+            condenado à execução pelo Governo Mundial, suas últimas palavras
+            lançaram legiões aos mares. "Meu tesouro? Se quiserem, podem
+            pegá-lo. Procurem-no! Ele contém tudo que este mundo pode
+            oferecer!".
+            <div class="botoes">
+              <button role="button" class="botao"><i class="fa-solid fa-play"></i>ASSISTIR AGORA</button>
+              <button role="button" class="botao"><i class="fa-solid fa-circle-info"></i>MAIS INFORMAÇÕES</button>
+            </div>
+          </p>
+        </div>
+      </div>
+    </main>
+    <script src="https://kit.fontawesome.com/885d1d5b59.js" crossorigin="anonymous"></script>
   </body>
 </html>
