--- a/index.html
+++ b/index.html
@@ -5,9 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style/main.css" />
+      <!-- owl css -->
+    <link rel="stylesheet" href="style/owl/owl.carousel.min.css">
+    <link rel="stylesheet" href="style/owl/owl.theme.default.min.css">
+      <!-- responsividade -->
+    <link rel="stylesheet" href="style/responsive.css">
     <title>NERDFLIX</title>
+
   </head>
   <body>
+      <!-- Navbar -->
     <header>
       <div class="container">
         <h2 class="logo">NERDFLIX</h2>
@@ -21,7 +28,7 @@
     </header>
 
     <main>
-      <!-- classe wrapper -->
+      <!-- Classe wrapper - Conteúdo principal -->
       <div class="filme-principal">
         <div class="container">
           <h3 class="titulo">ONE PIECE</h3>
@@ -40,6 +47,81 @@
         </div>
       </div>
     </main>
+
+      <!-- Carrosel -->
+
+    <div class="carrosel-filmes">
+      <div class="owl-carousel owl-theme">
+        <div class="item">
+          <img src="img/image1.jpg" alt="imagem 1">
+        </div>
+        <div class="item">
+          <img src="img/image2.jpg" alt="imagem 2">
+        </div>
+        <div class="item">
+          <img src="img/image3.jpg" alt="imagem 3">
+        </div>
+        <div class="item">
+          <img src="img/image4.jpg" alt="imagem 4">
+        </div>
+        <div class="item">
+          <img src="img/image5.jpg" alt="imagem 5">
+        </div>
+        <div class="item">
+          <img src="img/image6.jpg" alt="imagem 6">
+        </div>
+        <div class="item">
+          <img src="img/image7.jpg" alt="imagem 7">
+        </div>
+        <div class="item">
+          <img src="img/image8.jpg" alt="imagem 8">
+        </div>
+        <div class="item">
+          <img src="img/image9.jpg" alt="imagem 9">
+        </div>
+        <div class="item">
+          <img src="img/image10.jpg" alt="imagem 10">
+        </div>
+      </div>
+    </div>
+
+    <footer class="footer">
+      <div class="redes-sociais">
+        <i class="fa-brands fa-facebook"></i>
+        <i class="fa-brands fa-instagram"></i>
+        <i class="fa-brands fa-twitter-square"></i>
+        <i class="fa-brands fa-youtube"></i>
+      </div>
+      <div class="infos-contato">
+
+<div class="links">
+  <ul class="links-box">
+    <li>Idioma e legendas</li>
+    <li>Centro de ajuda</li>
+    <li>Carreiras</li>
+    <li>Privacidade</li>
+    <li>Preferência de cookies</li>
+    <li>Entre em contato</li>
+    <li>Audiodescrição</li>
+    <li>Cartão pré-pago</li>
+    <li>Relação com investidores</li>
+    <li>Termos de uso</li>
+    <li>Avisos legais</li>
+    <li>Informações corporativas</li>
+  </ul>
+</div>
+
+      </div>
+      <div class="copyright">
+        <span>© 2022 Nerdflix, Inc. Desenvolvido por <strong> <a href="https://www.linkedin.com/in/caio-custodio/" target="_blank">Caio Custódio Moreira</a> </strong></span>
+      </div>
+
+    </footer>
+
     <script src="https://kit.fontawesome.com/885d1d5b59.js" crossorigin="anonymous"></script>
+    <script src="js/owl/jquery.min.js"></script>
+    <script src="js/owl/owl.carousel.min.js"></script>
+    <script src="js/owl/setup.js"></script>
+
   </body>
 </html>
