--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="style/owl/owl.theme.default.min.css">
       <!-- responsividade -->
     <link rel="stylesheet" href="style/responsive.css">
+    <link rel="shortcut icon" href="img/netflix_logo_icon_170919.ico">
     <title>NERDFLIX</title>
 
   </head>
@@ -85,36 +86,41 @@
       </div>
     </div>
 
-    <footer class="footer">
-      <div class="redes-sociais">
-        <i class="fa-brands fa-facebook"></i>
-        <i class="fa-brands fa-instagram"></i>
-        <i class="fa-brands fa-twitter-square"></i>
-        <i class="fa-brands fa-youtube"></i>
-      </div>
-      <div class="infos-contato">
+<!-- Footer -->
 
-<div class="links">
-  <ul class="links-box">
-    <li>Idioma e legendas</li>
-    <li>Centro de ajuda</li>
-    <li>Carreiras</li>
-    <li>Privacidade</li>
-    <li>Preferência de cookies</li>
-    <li>Entre em contato</li>
-    <li>Audiodescrição</li>
-    <li>Cartão pré-pago</li>
-    <li>Relação com investidores</li>
-    <li>Termos de uso</li>
-    <li>Avisos legais</li>
-    <li>Informações corporativas</li>
-  </ul>
-</div>
+    <footer>
+     <div class="footer">
+       <ul class="links-redes">
+         <div class="redes-sociais">
+           <i class="fa-brands fa-facebook"></i>
+           <i class="fa-brands fa-instagram"></i>
+           <i class="fa-brands fa-twitter-square"></i>
+           <i class="fa-brands fa-youtube"></i>
+         </div>
+       </ul>
+   <div class="links">
+   <ul class="links-box">
+     <li class="li">Idioma e legendas</li>
+     <li class="li">Centro de ajuda</li>
+     <li class="li">Carreiras</li>
+     <li class="li">Privacidade</li>
+     <li class="li">Preferência de cookies</li>
+     <li class="li">Entre em contato</li>
+     <li class="li">Audiodescrição</li>
+     <li class="li">Cartão pré-pago</li>
+     <li class="li">Relação com investidores</li>
+     <li class="li">Termos de uso</li>
+     <li class="li">Avisos legais</li>
+     <li class="li">Informações corporativas</li>
+   </ul>
+ </div>
+ 
+       </div>
+       <div class="copyright">
+         <span>© 2022 Nerdflix, Inc. Desenvolvido por <strong> <a href="https://www.linkedin.com/in/caio-custodio/" target="_blank">Caio Custódio Moreira</a> </strong></span>
+       </div>
 
-      </div>
-      <div class="copyright">
-        <span>© 2022 Nerdflix, Inc. Desenvolvido por <strong> <a href="https://www.linkedin.com/in/caio-custodio/" target="_blank">Caio Custódio Moreira</a> </strong></span>
-      </div>
+     </div> 
 
     </footer>
 
